Remove Redundant Endpoints
